# cwmp

./: Cargo.toml  README.md  tarpaulin-report.html
.github/workflows/: build.yml  coverage.yml  main.yml  rust.yml
benches/: generate_add_object.rs  generate_inform.rs  parse_add_object.rs  parse_inform.rs
src/: error.rs  lib.rs
src/protocol/: addobject.rs  addobjectresponse.rs  allqueuedtransfers.rs  argstruct.rs  autonomousdustatechangecomplete.rs  autonomousdustatechangecompleteresponse.rs  autonomoustransfercomplete.rs  autonomoustransfercompleteresponse.rs  autonopresult.rs  bodyelement.rs  canceltransfer.rs  canceltransferresponse.rs  changedustate.rs  changedustateresponse.rs  cwmpversion.rs  deleteobject.rs  deleteobjectresponse.rs  deviceid.rs  download.rs  downloadresponse.rs  dustatechangecomplete.rs  dustatechangecompleteresponse.rs  envelope.rs  eventstruct.rs  factoryreset.rs  factoryresetresponse.rs  fault.rs  getallqueuedtransfers.rs  getallqueuedtransfersresponse.rs  getoptions.rs  getoptionsresponse.rs  getparameterattributes.rs  getparameterattributesresponse.rs  getparameternames.rs  getparameternamesresponse.rs  getparametervalues.rs  getparametervaluesresponse.rs  getqueuedtransfers.rs  getqueuedtransfersresponse.rs  getrpcmethods.rs  (+42 more)
src/xmlsamples/: add_object_1.xml  add_object_2.xml  add_object_response_1.xml  autonomous_dustate_change_complete_1.xml  autonomous_dustate_change_complete_response_1.xml  autonomous_transfer_complete_1.xml  autonomous_transfer_complete_response_1.xml  cancel_transfer_1.xml  cancel_transfer_response_1.xml  change_du_state_1.xml  change_du_state_2.xml  change_du_state_3.xml  change_du_state_response_1.xml  delete_object_1.xml  delete_object_response_1.xml  download_1.xml  download_2.xml  download_response_1.xml  du_state_change_complete_response_1.xml  factory_reset_response_1.xml  fault_1.xml  get_parameter_attributes_1.xml  get_parameter_attributes_response_1.xml  get_parameter_names_1.xml  get_parameter_names_response_1.xml  get_parameter_values_1.xml  get_parameter_values_response_1.xml  get_queued_transfers_1.xml  (+27 more)
tests/: parser.rs
(+7 files in other folders)
