[package]
name = "cwmp"
version = "0.1.0"
authors = ["jda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = { git = "https://github.com/jdalberg/xml-rs", branch = "parsefix" }
log = "0.4.8"
chrono = "0.4.0"
rand = "0.7.3"

[dev-dependencies]
doc-comment = "0.3"
criterion = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"

[[bench]]
name = "parse_add_object"
harness = false

[[bench]]
name = "parse_inform"
harness = false

[[bench]]
name = "generate_add_object"
harness = false

[[bench]]
name = "generate_inform"
harness = false
