[package]
name = "cwmp"
version = "0.2.4"
authors = ["Jesper Dalberg"]
edition = "2018"
license = "Unlicense"
description = "Parse and generate CWMP messages"
repository = "https://github.com/jdalberg/cwmp/"
readme = "README.md"
keywords = ["cwmp", "tr-069", "acs"]
categories = ["parsing"]

[dependencies]
xml-rs = "0.8"
log = "0.4"
chrono = "0.4"
rand = "0.8"

[dev-dependencies]
doc-comment = "0.3"
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "parse_add_object"
harness = false

[[bench]]
name = "parse_inform"
harness = false

[[bench]]
name = "generate_add_object"
harness = false

[[bench]]
name = "generate_inform"
harness = false
